Scores:  Added 'Record' to Pre-Game table, added 'Pre-Game' check, change Z-Index ordering to prevent Loader from hiding behind Boxex.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -162,8 +162,9 @@ h3 {
   text-align: right;
 }
 .scoringSummaryContainer .teamInfoTable {
-  display: table;
-  margin: 10px 0;
+  clear: both;
+  float: right;
+  padding: 15px 10px 15px 0;
 }
 .scoringSummaryContainer .teamInfoTable > .row {
   display: table-row;
